--- a/index.html
+++ b/index.html
@@ -33,30 +33,7 @@
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
                 <a class="nav-link active" href="index.html">Home</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="courses.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Online Courses</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown04">
-                  <a class="dropdown-item" href="courses.html">HTML</a>
-                  <a class="dropdown-item" href="courses.html">WordPress</a>
-                  <a class="dropdown-item" href="courses.html">Web Development</a>
-                  <a class="dropdown-item" href="courses.html">Javascript</a>
-                  <a class="dropdown-item" href="courses.html">Photoshop</a>
-                </div>
-
-              </li>
-
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown05">
-                  <a class="dropdown-item" href="#">HTML</a>
-                  <a class="dropdown-item" href="#">WordPress</a>
-                  <a class="dropdown-item" href="#">Web Development</a>
-                  <a class="dropdown-item" href="#">Javascript</a>
-                  <a class="dropdown-item" href="#">Photoshop</a>
-                </div>
-
-              </li>
+              </li>              
               <li class="nav-item">
                 <a class="nav-link" href="blog.html">Blog</a>
               </li>
@@ -88,9 +65,9 @@
           <div class="col-md-8 text-center">
 
             <div class="mb-5 element-animate">
-              <h1>Learn From Doing</h1>
-              <p class="lead">Learn something new every day with skwela lorem ipsum dolor sit amet.</p>
-              <p><a href="#" class="btn btn-primary">Sign up and get a 7-day free trial</a></p>
+              <h1>Juan Esteban Caicedo</h1>
+              <p class="lead">Ingeniería de Sistemas y Computación - Computación Visual</p>
+              <p><a href="#" class="btn btn-primary">Contáctame</a></p>
             </div>
 
             
@@ -98,130 +75,8 @@
         </div>
       </div>
     </section>
-    <!-- END section -->
-
-    <section class="school-features d-flex" style="background-image: url(images/big_image_3.jpg);">
-
-      <div class="inner">
-        <div class="media d-block feature">
-          <div class="icon"><span class="flaticon-video-call"></span></div>
-          <div class="media-body">
-            <h3 class="mt-0">Online trainings from experts</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora fuga suscipit numquam esse saepe quam, eveniet iure assumenda dignissimos aliquam!</p>
-          </div>
-        </div>
-
-        <div class="media d-block feature">
-          <div class="icon"><span class="flaticon-student"></span></div>
-          <div class="media-body">
-            <h3 class="mt-0">Learn anywhere in the world</h3>
-            <p>Delectus fuga voluptatum minus amet, mollitia distinctio assumenda voluptate quas repellat eius quisquam odio. Aliquam, laudantium, optio? Error velit, alias.</p>
-          </div>
-        </div>
-
-        <div class="media d-block feature">
-          <div class="icon"><span class="flaticon-video-player-1"></span></div>
-          <div class="media-body">
-            <h3 class="mt-0">Creative learning video</h3>
-            <p>Delectus fuga voluptatum minus amet, mollitia distinctio assumenda voluptate quas repellat eius quisquam odio. Aliquam, laudantium, optio? Error velit, alias.</p>
-          </div>
-        </div>
-
-
-        <div class="media d-block feature">
-          <div class="icon"><span class="flaticon-audiobook"></span></div>
-          <div class="media-body">
-            <h3 class="mt-0">Audio learning</h3>
-            <p>Harum, adipisci, aspernatur. Vero repudiandae quos ab debitis, fugiat culpa obcaecati, voluptatibus ad distinctio cum soluta fugit sed animi eaque?</p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- END section -->
-
-
-    <section class="site-section">
-      <div class="container">
-        <section class="school-features text-dark d-flex">
-
-          <div class="inner">
-            <div class="media d-block feature">
-              <div class="icon"><span class="flaticon-video-call"></span></div>
-              <div class="media-body">
-                <h3 class="mt-0">Online trainings from experts</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora fuga suscipit numquam esse saepe quam, eveniet iure assumenda dignissimos aliquam!</p>
-              </div>
-            </div>
-
-            <div class="media d-block feature">
-              <div class="icon"><span class="flaticon-student"></span></div>
-              <div class="media-body">
-                <h3 class="mt-0">Learn anywhere in the world</h3>
-                <p>Delectus fuga voluptatum minus amet, mollitia distinctio assumenda voluptate quas repellat eius quisquam odio. Aliquam, laudantium, optio? Error velit, alias.</p>
-              </div>
-            </div>
-
-            <div class="media d-block feature">
-              <div class="icon"><span class="flaticon-video-player-1"></span></div>
-              <div class="media-body">
-                <h3 class="mt-0">Creative learning video</h3>
-                <p>Delectus fuga voluptatum minus amet, mollitia distinctio assumenda voluptate quas repellat eius quisquam odio. Aliquam, laudantium, optio? Error velit, alias.</p>
-              </div>
-            </div>
-
-
-            <div class="media d-block feature">
-              <div class="icon"><span class="flaticon-audiobook"></span></div>
-              <div class="media-body">
-                <h3 class="mt-0">Audio learning</h3>
-                <p>Harum, adipisci, aspernatur. Vero repudiandae quos ab debitis, fugiat culpa obcaecati, voluptatibus ad distinctio cum soluta fugit sed animi eaque?</p>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <section class="school-features text-dark last d-flex">
-
-          <div class="inner">
-            <div class="media d-block feature">
-              <div class="icon"><span class="flaticon-student-1"></span></div>
-              <div class="media-body">
-                <h3 class="mt-0">Online trainings from experts</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora fuga suscipit numquam esse saepe quam, eveniet iure assumenda dignissimos aliquam!</p>
-              </div>
-            </div>
-
-            <div class="media d-block feature">
-              <div class="icon"><span class="flaticon-interface"></span></div>
-              <div class="media-body">
-                <h3 class="mt-0">Learn anywhere in the world</h3>
-                <p>Delectus fuga voluptatum minus amet, mollitia distinctio assumenda voluptate quas repellat eius quisquam odio. Aliquam, laudantium, optio? Error velit, alias.</p>
-              </div>
-            </div>
-
-            <div class="media d-block feature">
-              <div class="icon"><span class="flaticon-book"></span></div>
-              <div class="media-body">
-                <h3 class="mt-0">Creative learning video</h3>
-                <p>Delectus fuga voluptatum minus amet, mollitia distinctio assumenda voluptate quas repellat eius quisquam odio. Aliquam, laudantium, optio? Error velit, alias.</p>
-              </div>
-            </div>
-
-
-            <div class="media d-block feature">
-              <div class="icon"><span class="flaticon-geography"></span></div>
-              <div class="media-body">
-                <h3 class="mt-0">Audio learning</h3>
-                <p>Harum, adipisci, aspernatur. Vero repudiandae quos ab debitis, fugiat culpa obcaecati, voluptatibus ad distinctio cum soluta fugit sed animi eaque?</p>
-              </div>
-            </div>
-          </div>
-        </section>
-
-
-      </div>
-    </section>
-    <!-- END section -->
+    <!-- END section -->  
+    
 
     <section class="section-cover" data-stellar-background-ratio="0.5" style="background-image: url(images/big_image_3.jpg);">
       <div class="container">
