--- a/index.html
+++ b/index.html
@@ -122,9 +122,10 @@
           <div class="col-lg-1 order-lg-2"></div>
           <div class="col-lg-4 order-lg-1 order-2 mb-lg-0 mb-5">
             <blockquote class="testimonial">
-              &ldquo; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt incidunt nihil ab cumque molestiae commodi. &rdquo;
+              De tres maneras podemos aprender: en primer lugar por la reflexión, que es la más noble; en segundo lugar, 
+              por imitación, que es más fácil; y en tercer lugar por la experiencia, que es la más amarga
             </blockquote>
-            <p>&mdash; John Doe, Certified ReactJS Student</p>
+            <p>&mdash; Confucio</p>
           </div>
         </div>
       </div>
