--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
           <div class="col-lg-1 order-lg-2"></div>
           <div class="col-lg-4 order-lg-1 order-2 mb-lg-0 mb-5">
             <blockquote class="testimonial">
-              De tres maneras podemos aprender: en primer lugar por la reflexión, que es la más noble; en segundo lugar, 
-              por imitación, que es más fácil; y en tercer lugar por la experiencia, que es la más amarga
+              "De tres maneras podemos aprender: en primer lugar por la reflexión, que es la más noble; en segundo lugar, 
+              por imitación, que es más fácil; y en tercer lugar por la experiencia, que es la más amarga"
             </blockquote>
             <p>&mdash; Confucio</p>
           </div>
@@ -136,8 +136,11 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-4">
-            <h3>About</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, accusantium optio unde perferendis eum illum voluptatibus dolore tempora, consequatur minus asperiores temporibus reprehenderit.</p>
+            <h3>Contacto</h3>
+            <p>Juan Esteban Caicedo</p>
+            <p>Ingeniería de Sistemas y Computación</p>
+            <p>jecaicedop@unal.edu.co</p>
+            <p>311 591****</p>
           </div>
           <div class="col-md-6 ml-auto">
             <div class="row">
